--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 
 POSTGRE_USER=postgres
-POSTGRE_HOST=3.83.113.106
-POSTGRE_DATABASE=test_sale
-POSTGRE_PASSWORD=123456789
+POSTGRE_HOST=
+POSTGRE_DATABASE=
+POSTGRE_PASSWORD=
 POSTGRE_PORT=5432
