--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "4.0.0",
     "pg": "^8.9.0",
+    "pg-format": "^1.0.4",
     "pm2": "^5.1.0",
     "pug": "^3.0.1",
     "sqlstring": "^2.3.3",
@@ -100,7 +101,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.2.0",
-    "husky": "^3.0.7",
+    "husky": "^8.0.3",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.1",
     "nyc": "^15.1.0",
